--- a/xdls.html
+++ b/xdls.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
     <body>
-        <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/localforage/1.1.1/localforage.js"></script>
+        <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/localforage/1.2.1/localforage.min.js"></script>
         <script>
             var PREFIX = 'xdls:';
 
