--- a/xdls.html
+++ b/xdls.html
@@ -5,7 +5,7 @@
         <script>
             var PREFIX = 'xdls:';
             localforage.config( {
-                size: 4500000, // safari seems to complain now with the default size so back off a bit
+                size: 4000000, // safari seems to complain now with the default size so back off a bit
                 name: 'XDLS'
             } );
 
@@ -53,9 +53,14 @@
                     return;
                 }
 
-                var arguments = data.arguments || [];
-                arguments.push( onLocalForageComplete.bind( null, event, data ) );
-                localforage[ method ].apply( localforage, data.arguments );
+                try {
+                    var arguments = data.arguments || [];
+                    arguments.push( onLocalForageComplete.bind( null, event, data ) );
+                    localforage[ method ].apply( localforage, data.arguments );
+                }
+                catch ( ex ) {
+                    onLocalForageComplete( event, data, ex );
+                }
             }
 
             if( window.addEventListener ) {
