test for indexOf on data, switch away from gulp

--- a/xdls.html
+++ b/xdls.html
@@ -26,7 +26,7 @@
             }
 
             function onMessage( event ) {
-                if ( event.data.indexOf( PREFIX ) !== 0 ) {
+                if ( !event.data || !event.data.indexOf || event.data.indexOf( PREFIX ) !== 0 ) {
                     return;
                 }
 
